syntax = "proto3";

package grpcntt.rpc;

option go_package = "rpc";

service Service {
    rpc SimplePing(PingRequest) returns (PingResponse);
}

message PingRequest {
    uint64 sequence = 1;
    Time time = 2;
    bytes payload = 3;
}

message PingResponse {
    Time time = 1;
    PingRequest request = 2;
}

message Time {
    int64 seconds = 1;
    int64 nanos = 2;
}
